--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title>Skakturnering Google Sheet</title>
+    <title>Skakturnering på HPR</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
-            background: #f9f9f9;
+            background: #333333;
         }
         h1 {
             text-align: center;
@@ -25,6 +25,6 @@
 <body>
     <h1>Skakturnering Deltagerliste</h1>
     <p style="text-align:center;">Indsæt dit Google Sheet link i src-attributten nedenfor.</p>
-    <iframe src="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID_HERE/pubhtml?widget=true&amp;headers=false"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/1r1M6Ejcf7SHL39wgm7njANknubeq194diif-mUFdHUw/edit?usp=sharing"></iframe>
 </body>
 </html>
