--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <title>Skakturnering på HPR</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background: #333333;
-        }
-        h1 {
-            text-align: center;
-        }
-        iframe {
-            display: block;
-            margin: 0 auto;
-            border: none;
-            width: 90%;
-            height: 600px;
-        }
-    </style>
-</head>
-<body>
-    <iframe src="https://docs.google.com/spreadsheets/d/1r1M6Ejcf7SHL39wgm7njANknubeq194diif-mUFdHUw/edit?usp=sharing"></iframe>
-</body>
-</html>
+5A ENZO
