Change title from '5.A Skak ELO' to 'HPR Skak ELO'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>5.A Skak ELO</title>
+  <title>HPR Skak ELO</title>
   <style>
     :root {
       --bg: #0d1117;
