--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HPR Skak ELO</title>
+  <title>HPR SKAK ELO</title>
   <style>
     :root {
       --bg: #0d1117;
@@ -20,9 +20,9 @@
     * { box-sizing: border-box; }
     html, body { margin:0; padding:0; background: var(--bg); color: var(--text); font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
     header { padding: 24px 16px; background: var(--panel); border-bottom: 1px solid var(--border); position: sticky; top: 0; z-index: 5; }
-    header .wrap { max-width: 900px; margin: 0 auto; display: flex; gap: 12px; align-items: center; justify-content: space-between; }
+    header .wrap { max-width: 960px; margin: 0 auto; display: flex; gap: 12px; align-items: center; justify-content: space-between; }
     h1 { margin: 0; font-size: 20px; font-weight: 600; letter-spacing: 0.2px; }
-    main { max-width: 900px; margin: 16px auto 96px auto; padding: 0 16px; }
+    main { max-width: 960px; margin: 16px auto 96px auto; padding: 0 16px; }
 
     .card { background: var(--panel); border:1px solid var(--border); border-radius: 10px; }
     .card h2 { margin: 0; padding: 14px 16px; border-bottom:1px solid var(--border); font-size: 16px; font-weight: 600; }
@@ -41,7 +41,7 @@
     button:hover { filter: brightness(1.05); }
 
     .footerbar { position: fixed; left:0; right:0; bottom:0; background: rgba(22,27,34,0.98); border-top: 1px solid var(--border); padding: 10px 12px; z-index: 10; }
-    .footerwrap { max-width: 900px; margin: 0 auto; display: grid; grid-template-columns: 1fr; gap:8px; }
+    .footerwrap { max-width: 960px; margin: 0 auto; display: grid; grid-template-columns: 1fr; gap:8px; }
 
     .calc { display: grid; grid-template-columns: repeat(12, 1fr); gap:8px; align-items: center; }
     .calc label { color: var(--muted); font-size: 13px; }
@@ -49,6 +49,8 @@
     .calc input[type="number"] { width: 100%; }
 
     .result { text-align: right; font-variant-numeric: tabular-nums; }
+
+    .note { color: var(--muted); font-size: 13px; padding: 12px 16px; }
 
     @media (max-width: 720px) {
       .calc { grid-template-columns: repeat(6, 1fr); }
@@ -59,7 +61,7 @@
 <body>
   <header>
     <div class="wrap">
-      <h1>5.A Skak ELO</h1>
+      <h1>HPR SKAK ELO</h1>
       <div class="controls">
         <button id="reload">Opdater listen</button>
       </div>
@@ -69,6 +71,7 @@
   <main>
     <section class="card" aria-labelledby="liste-h2">
       <h2 id="liste-h2">Spillere sorteret efter rating</h2>
+      <div class="note">Data hentes fra filen players.json i samme mappe. Opdater players.json for at ændre listen.</div>
       <div style="overflow:auto">
         <table id="players">
           <thead>
@@ -132,7 +135,7 @@
         data.sort((a,b) => (b.rating||0) - (a.rating||0));
         renderTable(data);
       } catch (e) {
-        TBL.innerHTML = `<tr><td colspan="3" style="padding:18px; color:#f85149;">${e.message}</td></tr>`;
+        TBL.innerHTML = `<tr><td colspan=\"3\" style=\"padding:18px; color:#f85149;\">${e.message}</td></tr>`;
       }
     }
 
@@ -141,9 +144,9 @@
       rows.forEach((p, i) => {
         const tr = document.createElement('tr');
         tr.innerHTML = `
-          <td class="rank">${i+1}</td>
-          <td class="name">${escapeHtml(p.name)}</td>
-          <td class="elo">${Math.round(p.rating)}</td>
+          <td class=\"rank\">${i+1}</td>
+          <td class=\"name\">${escapeHtml(p.name)}</td>
+          <td class=\"elo\">${Math.round(p.rating)}</td>
         `;
         TBL.appendChild(tr);
       });
@@ -155,7 +158,7 @@
 
     reloadBtn.addEventListener('click', loadPlayers);
 
-    // ELO kalkulator
+    // ELO-kalkulator (K=32)
     const ra = document.getElementById('ra');
     const rb = document.getElementById('rb');
     const resSel = document.getElementById('result');
