Update index.html with manifest and fix syntax
Fix HTML syntax and add manifest link.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <!doctype html>
 <html lang="da">
 <head>
+  
+manifest.webmanifest
+<link rel="icon" type="image/png"ouch-icon" sizes="180x180" href="ontent="#0d1117">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HPR SKAK ELO</title>
