Correct HTML link tags and attributes
Fixed HTML syntax errors in index.html.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <html lang="da">
 <head>
   
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>HPR SKAK ELO</title>
+
+<!-- PWA / Ikoner -->
 manifest.webmanifest
-<link rel="icon" type="image/png"ouch-icon" sizes="180x180" href="ontent="#0d1117">
+<link rel="icon" type="image/png" sizes="32x32" href80eme-color" content="#0d1117" />
+
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
