--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
-
 <!doctype html>
 <html lang="da">
 <head>
-  
-
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>HPR SKAK ELO</title>
-
-<!-- PWA / Ikoner -->
-manifest.webmanifest
-<link rel="icon" type="image/png" sizes="32x32" href80eme-color" content="#0d1117" />
-
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HPR SKAK ELO</title>
+
+  <!-- PWA / Ikoner -->
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
+  <meta name="theme-color" content="#0d1117" />
+
   <style>
     :root {
       --bg: #0d1117;
