Register service worker in index.html

--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
     });
 
     loadPlayers();
+    if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js').then(() => {
+    console.log('Service worker registered');
+  }).catch(err => console.error('SW registration failed:', err));
+}
   </script>
 </body>
 </html>
